trunk/Archive2/ce/7e2142ec2a1af8/output
main.cpp: In function 'int main()':
main.cpp:13:17: warning: ISO C++ forbids variable length array 'p' [-Wvla]
     int p[foo(n)];
                 ^
main.cpp:14:18: error: no matching function for call to 'f()'
     f<sizeof(p)>(); // oops
                  ^
main.cpp:14:18: note: candidate is:
main.cpp:8:27: note: template<unsigned int n> void f()
 template<unsigned n> void f();
                           ^
main.cpp:8:27: note:   template argument deduction/substitution failed:
main.cpp:14:18: error: '(long unsigned int)((((sizetype)<anonymous>) + 1u) * 4u)' is not a constant expression
     f<sizeof(p)>(); // oops
                  ^
main.cpp:14:18: note: in template argument for type 'unsigned int' 
